[gd_scene load_steps=3 format=3 uid="uid://dvy14wydp8kry"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7wi015tqanaq" path="res://assets/crosshair.png" id="3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("3")

[node name="StatPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15408
anchor_top = 0.933642
anchor_right = 0.84592
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatCtr" type="HBoxContainer" parent="StatPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0150892
anchor_top = 0.251571
anchor_right = 0.975309
anchor_bottom = 0.809711
grow_horizontal = 2
grow_vertical = 2
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Level" type="HSplitContainer" parent="StatPanel/StatCtr"]
layout_mode = 2
offset_right = 54.0
offset_bottom = 26.0

[node name="LevelLbl" type="Label" parent="StatPanel/StatCtr/Level"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 26.0
text = "Lvl."
uppercase = true

[node name="LevelStat" type="Label" parent="StatPanel/StatCtr/Level"]
layout_mode = 2
offset_left = 44.0
offset_right = 54.0
offset_bottom = 26.0
text = "0"

[node name="VSeparator" type="VSeparator" parent="StatPanel/StatCtr"]
light_mask = 3
layout_mode = 2
offset_left = 58.0
offset_right = 62.0
offset_bottom = 26.0

[node name="Health" type="HSplitContainer" parent="StatPanel/StatCtr"]
layout_mode = 2
offset_left = 66.0
offset_right = 274.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="HealthLbl" type="Label" parent="StatPanel/StatCtr/Health"]
layout_mode = 2
offset_right = 62.0
offset_bottom = 26.0
text = "Health"
uppercase = true

[node name="HealthStat" type="ProgressBar" parent="StatPanel/StatCtr/Health"]
custom_minimum_size = Vector2i(0, 20)
layout_mode = 2
offset_left = 74.0
offset_top = 3.0
offset_right = 208.0
offset_bottom = 23.0
size_flags_vertical = 4
show_percentage = false

[node name="Armor" type="HSplitContainer" parent="StatPanel/StatCtr"]
layout_mode = 2
offset_left = 278.0
offset_right = 487.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="ArmorLbl" type="Label" parent="StatPanel/StatCtr/Armor"]
layout_mode = 2
offset_right = 59.0
offset_bottom = 26.0
text = "Armor"
uppercase = true

[node name="ArmorStat" type="ProgressBar" parent="StatPanel/StatCtr/Armor"]
custom_minimum_size = Vector2i(0, 20)
layout_mode = 2
offset_left = 71.0
offset_top = 3.0
offset_right = 209.0
offset_bottom = 23.0
size_flags_vertical = 4
show_percentage = false

[node name="XP" type="HSplitContainer" parent="StatPanel/StatCtr"]
layout_mode = 2
anchors_preset = -1
offset_left = 491.0
offset_right = 700.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="XPLbl" type="Label" parent="StatPanel/StatCtr/XP"]
layout_mode = 2
offset_right = 34.0
offset_bottom = 26.0
text = "EXP."
uppercase = true

[node name="XPStat" type="ProgressBar" parent="StatPanel/StatCtr/XP"]
custom_minimum_size = Vector2i(0, 20)
layout_mode = 2
offset_left = 46.0
offset_top = 3.0
offset_right = 209.0
offset_bottom = 23.0
size_flags_vertical = 4
rounded = true
show_percentage = false

[node name="VSeparator2" type="VSeparator" parent="StatPanel/StatCtr"]
layout_mode = 2
offset_left = 704.0
offset_right = 708.0
offset_bottom = 26.0

[node name="Inf" type="HSplitContainer" parent="StatPanel/StatCtr"]
layout_mode = 2
offset_left = 712.0
offset_right = 765.0
offset_bottom = 26.0

[node name="InfLbl" type="Label" parent="StatPanel/StatCtr/Inf"]
layout_mode = 2
offset_right = 31.0
offset_bottom = 26.0
text = "inf."
uppercase = true

[node name="InfStat" type="Label" parent="StatPanel/StatCtr/Inf"]
layout_mode = 2
offset_left = 43.0
offset_right = 53.0
offset_bottom = 26.0
text = "0"

[node name="MessageTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00976562
anchor_top = 0.01
anchor_right = 0.705078
anchor_bottom = 0.0333333
